full-app/k8s/services/client-clusterip-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-service
spec:
  type: ClusterIP # Default
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
