full-app/k8s/services/server-clusterip-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: server-clusterip-service
spec:
  type: ClusterIP # Default
  selector:
    app: server
  ports:
    - name: server
      protocol: TCP
      port: 5000
      targetPort: 5000
