full-app/k8s/services/server-nodeport-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: server-nodeport-service
spec:
  type: NodePort
  selector:
    app: server
  ports:
    - name: server
      protocol: TCP
      port: 5000
      targetPort: 5000
