full-app/k8s/services/full-ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: full-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: ideas.com
      http:
        paths:
          - path: /api/ideas
            pathType: Prefix
            backend:
              service:
                name: server-clusterip-service
                port:
                  number: 5000
          - path: /?(.*) # Any other requests (with regular expression)
            pathType: Prefix
            backend:
              service:
                name: client-clusterip-service
                port:
                  number: 3000
